--- a/style.scss
+++ b/style.scss
@@ -33,7 +33,7 @@ img, video {display: block;}
 @font-face {font-family: "Kalam"; src: url("TV_Fonts/Kalam.ttf");}
 @font-face {font-family: "Quicksand"; src: url("TV_Fonts/Quicksand.ttf");}
 @font-face {font-family: "AutourOne"; src: url("TV_Fonts/AutourOne.ttf");}
-@font-face {font-family: "EvilDead"; src: url("TV_Fonts/EvilDead.ttf");}
+@font-face {font-family: "EvilDead"; src: url("TV_Fonts/EvilDead.TTF");}
 @font-face {font-family: "OCRA"; src: url("TV_Fonts/OCRA.ttf");}
 
 $white: #ffffff;
