--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ img, video {
 }
 @font-face {
   font-family: "EvilDead";
-  src: url("TV_Fonts/EvilDead.ttf");
+  src: url("TV_Fonts/EvilDead.TTF");
 }
 @font-face {
   font-family: "OCRA";
